// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRenderer does not render the layout with the field empty in non-editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="radio"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="text1"></div>
                <div class="ddm-field" data-field-name="text2"></div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field" data-field-name="select"></div>
              </div>
              <div class="col-md-2 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                <div class="ddm-field"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="date"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="numeric"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;

exports[`FormRenderer renders a layout in editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="0" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="radio">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="radio">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
              <div class="col col-ddm col-empty col-md-9" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="1" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="text1">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="text1">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                    <div class="ddm-field" data-field-name="text2">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="select">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="select">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                </div>
              </div>
              <div class="col col-ddm col-empty col-md-2" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="2" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="date">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="date">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="3" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="numeric">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="numeric">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="4" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;

exports[`FormRenderer renders a layout in pagination mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="ddm-form-page-container paginated">
        <div class="fade tab-pane active show" role="tabpanel">
          <div class="form-builder-layout">
            <div class="active ddm-form-page lfr-ddm-form-page">
              <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
              <h4 class="lfr-ddm-form-page-description"></h4>
              <div class="position-relative row">
                <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                  <div class="ddm-field" data-field-name="radio"></div>
                </div>
              </div>
              <div class="position-relative row">
                <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                  <div class="ddm-field" data-field-name="text1"></div>
                  <div class="ddm-field" data-field-name="text2"></div>
                </div>
                <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                  <div class="ddm-field" data-field-name="select"></div>
                </div>
              </div>
              <div class="position-relative row">
                <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                  <div class="ddm-field" data-field-name="date"></div>
                </div>
              </div>
              <div class="position-relative row">
                <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                  <div class="ddm-field" data-field-name="numeric"></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul class="ddm-pagination justify-content-center pagination">
          <li class="page-item active disabled" data-page-index="0"><a class="page-link" href="javascript:;">1</a></li>
        </ul>
        <div class="lfr-ddm-form-pagination-controls"><button class="btn btn-primary float-right lfr-ddm-form-submit" type="submit">submit</button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer renders a layout in wizard mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="radio"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="text1"></div>
                <div class="ddm-field" data-field-name="text2"></div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field" data-field-name="select"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="date"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="numeric"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;

exports[`FormRenderer renders a layout with an empty field only in editable mode 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="0" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="radio">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="radio">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
              <div class="col col-ddm col-empty col-md-9" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="1" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="text1">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="text1">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                    <div class="ddm-field" data-field-name="text2">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="select">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="select">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                </div>
              </div>
              <div class="col-md-2 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                <div class="ddm-field-container ddm-target h-100 ">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2"></div>
                </div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="2" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="date">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="date">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="3" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field-container ddm-target h-100 " data-field-name="numeric">
                  <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                  <div class="ddm-drag">
                    <div class="ddm-field" data-field-name="numeric">
                      <div class="ddm-field-not-found">Field doesn't exist.</div>
                    </div>
                  </div>
                  <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                </div>
              </div>
            </div>
            <div class="placeholder row">
              <div class="col col-ddm col-empty col-md-12" data-ddm-field-row="4" data-ddm-field-page="0">
                <div class="ddm-target"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;

exports[`FormRenderer renders a layout with pages in mode of list 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="radio"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="text1"></div>
                <div class="ddm-field" data-field-name="text2"></div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field" data-field-name="select"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="date"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="numeric"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;

exports[`FormRenderer renders default markup with Success Page ative 1`] = `
<div class="">
  <div class="lfr-ddm-form-container position-relative ddm-user-view-content">
    <div class="horizontal-line"></div>
    <div class="page">
      <div class="sheet fade tab-pane show" role="tabpanel">
        <div class="form-builder-layout">
          <h5 class="pagination"> </h5>
          <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
            <h3 class="lfr-ddm-form-page-title">Untitled name</h3>
            <h4 class="lfr-ddm-form-page-description"></h4>
            <div class="position-relative row">
              <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="radio"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="text1"></div>
                <div class="ddm-field" data-field-name="text2"></div>
              </div>
              <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                <div class="ddm-field" data-field-name="select"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="date"></div>
              </div>
            </div>
            <div class="position-relative row">
              <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                <div class="ddm-field" data-field-name="numeric"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-page-actions="0">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
      <div class="add-page-button-container">
        <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
        <div class="horizontal-line"></div>
      </div>
    </div>
    <div class="page">
      <div class="sheet simple-page ddm-page-success-layout">
        <div class="form-builder-layout">
          <h5 class="pagination">success-page</h5>
          <div class="active ddm-form-page lfr-ddm-form-page form-builder-success-page"><input class="form-builder-page-header-title form-control p-0" maxlength="120" placeholder="" data-setting="title" type="text" value=""><input class="form-builder-page-header-description form-control p-0" data-setting="body" type="text" maxlength="120" placeholder="" value=""></div>
        </div>
      </div>
      <div class="ddm-paginated-builder-dropdown" data-ddm-success-page-actions="1">
        <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg></button></div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="remove-success-page" type="button">remove-success-page</button></li>
  </ul>
</div>
`;
